--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,11 @@
     "authors": [
         {
             "name": "Mehdi Lahmam B.",
-            "email": "mehdi@lahmam.com"
+            "email": "mehdi@craftsmen.io"
         }
     ],
     "require": {
-        "fzaninotto/faker": "1.1.*",
+        "fzaninotto/faker": "1.2.*",
         "composer/installers": "*"
-    },
-    "suggest": {
-        "UnionOfRAD/lithium": "Lithium is required for this plugin.",
-        "fzaninotto/faker": "Faker is a PHP library that generates fake data for you."
-    },
-    "minimum-stability": "dev"
+    }
 }
